Update web page.

--- a/altrui/references.bib
+++ b/altrui/references.bib
@@ -14,3 +14,13 @@
 	Title = {Markdown},
 	Url = {http://daringfireball.net/projects/markdown/},
 	Year = {2004}}
+
+@misc{Nguyen2014,
+	Address = {San Francisco, {CA}},
+	Author = {Dan Nguyen},
+	Howpublished = {Available online from {\it Dan Nguyen's web page} at: \url{https://dannguyen.github.io/github-for-portfolios/}; February 28, 2017 was the last accessed date},
+	Month = {April 13},
+	Publisher = {{GitHub, Inc.}},
+	Title = {Build a Web Portfolio from Scratch: with {Github Pages}},
+	Url = {https://dannguyen.github.io/github-for-portfolios/},
+	Year = {2014}}
